# WebPy_HW10

./: .gitignore  README.md  pyproject.toml
dif/: create_quote.html  migrationMD.py  top_10.html
dif/src/: migration.py  seeds.py  web8.db
quotes/: webdbtest
quotes/quoteapp/: forms.py  models.py  urls.py  views.py
quotes/quoteapp/static/quoteapp/: style.css
quotes/quoteapp/templates/: about_author.html  add_author.html  index.html  search_tag.html
quotes/quoteapp/templatetags/: extract_tags.py
quotes/quotes/: settings.py
quotes/src/: migration.py  seeds.py
quotes/user/: urls.py  views.py
quotes/user/templates/user/: login.html  profile.html  signup.html
